# deep-learning

./: README.md
data-curation/: .gitignore  Makefile  README.md  full_pipeline.sh  main.ipynb  main.py  pyproject.toml  requirements.txt  test_small_sample.sh
data-curation/output/: classification_stats.json  dataset_non_english.json  dataset_numbers.json  dataset_unusual_proper_nouns.json
data-curation/output_test_10/: classified_full.json
data-curation/src/: __init__.py  classifier.py  curator.py  data_loader.py  logger.py  models.py  parser.py
insurance-claim-language-model/: bert_large_uncased_l0_005_b64_e5_finetuned_lora_porto_seguro_2025_11_20_19_30_10.ipynb  distilbert-base-uncased-l0.005_b64_e5_finetuned-lora-porto-seguro-2025-11-20_21-40-05  distilbert-base-uncased-l0.005_b64_e5_finetuned-lora-porto-seguro-2025-11-20_21-40-05.ipynb
qwen-from-scratch/: README.md  llm_from_scratch.ipynb
retrieval-augmented/: README.md  opensource_rag.ipynb
scratch-llm/tokenizer/: Cargo.toml
scratch-llm/tokenizer/src/: main.rs
scratch-llm/tokenizer/src/bpe/: encoder.rs  mod.rs  trainer.rs
scratch-llm/tokenizer/src/embeddings/: mod.rs
scratch-llm/tokenizer/src/viz/: mod.rs  plotter.rs
vit-semantic-segmentation/: README.md  vit-base-patch16-224-in21k-l0.005_b64_e5_finetuned-lora-food101-2025-11-20_02-34-57.ipynb
