[project]
name = "data-curation"
version = "1.0.0"
description = "Data curation"
authors = [
  {name = "Yves Emmanuel", email = "yveemmanuel@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
  "torch>=2.9.1",
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
  "ipykernel>=7.1.0",
  "pandas>=2.3.3",
]
